Optimized performance, responsiveness, and SEO. also implemented bottom navbar in mobile viewport

--- a/index.html
+++ b/index.html
@@ -2,15 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/og-image.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Portfolio of Kian Angeles, a full-stack developer building modern web apps with React, Node.js, and MongoDB."
+    />
+    <meta name="author" content="Kian Angeles" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Kian Angeles Portfolio" />
+    <meta property="og:title" content="Kian Angeles | Full-Stack Developer" />
+    <meta
+      property="og:description"
+      content="Portfolio of Kian Angeles, a full-stack developer building modern web apps with React, Node.js, and MongoDB."
+    />
+    <meta property="og:image" content="/og-image.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Kian Angeles | Full-Stack Developer" />
+    <meta
+      name="twitter:description"
+      content="Portfolio of Kian Angeles, a full-stack developer building modern web apps with React, Node.js, and MongoDB."
+    />
+    <meta name="twitter:image" content="/og-image.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <title>my-portfolio</title>
+    <title>Kian Angeles | Full-Stack Developer</title>
   </head>
   <body>
     <div id="root"></div>
