Updated SEO and fixed soft skills card brief bug

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/og-image.png" />
+    <link rel="icon" type="image/webp" href="/og-image-v2.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
@@ -17,14 +17,14 @@
       property="og:description"
       content="Portfolio of Kian Angeles, a full-stack developer building modern web apps with React, Node.js, and MongoDB."
     />
-    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image" content="/og-image-v2.webp" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Kian Angeles | Full-Stack Developer" />
     <meta
       name="twitter:description"
       content="Portfolio of Kian Angeles, a full-stack developer building modern web apps with React, Node.js, and MongoDB."
     />
-    <meta name="twitter:image" content="/og-image.png" />
+    <meta name="twitter:image" content="/og-image-v2.webp" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
